# cardiovascular-prediction-system

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: init.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: data.py  dependencies.py  health.py  predictions.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/processed/: feature_engineering.py
backend/app/models/: __init__.py  patient.py  prediction.py
backend/app/schemas/: patient.py  prediction.py
backend/app/services/: data_service.py  ml_service.py  prediction_service.py
backend/app/utils/: data_preprocessing.py  logger.py  model_utils.py
backend/ml_models/: data_ingestion.py  model_deployment.py  model_evaluation.py  train_model.py
backend/tests/: confest.py  test_api.py  test_data_processing.py  test_ml_service.py
docs/: api_documentation.md  deployment_guide.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: DataVisualization.tsx  Layout.tsx  PredictionForm.tsx  ResultDashboard.tsx
frontend/src/components/common/: LoadingSpinner.tsx
frontend/src/hooks/: useData.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  predictionService.ts  usePrediction.ts
frontend/src/tests/components/: PredictionForm.test.tsx
frontend/src/types/: intex.ts
monitoring/: logging_config.py
